style sectionA buttons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <p>We know how large objects will react but things on small scale, do not act that way</p>
             <div class="btns">
                 <button class="btn1">Get Quote Now</button>
-                <button class="btn2">Learn More</button>
+                <div class="btn2">
+                    Learn More
+                </div>
             </div>
         </div>
     </div>
