--- a/index.html
+++ b/index.html
@@ -38,6 +38,30 @@
                 </div>
             </div>
         </div>
+        <!-- cards -->
+        <div class="cards">
+            <div class="card">
+                <img width="70px" src="./images/people-outline.svg" alt="">
+                <div class="card-content">
+                    <h2 class="card-title">Peace of mind</h2>
+                    <p class="card-text">The quick dog jumps over the lazy dog.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img width="70px" width="10px" src="./images/people-outline.svg" alt="">
+                <div class="card-content">
+                    <h2 class="card-title">Set for life</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec hendrerit urna.</p>
+                </div>
+            </div>
+            <div id="left-card" class="card">
+                <img width="70px" width="10px" src="./images/people-outline.svg" alt="">
+                <div class="card-content">
+                    <h2 class="card-title">100% Satisfaction</h2>
+                    <p class="left-card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec hendrerit urna.</p>
+                </div>
+            </div>
+        </div>
     </div>
  </body>
  </html>
