--- a/index.html
+++ b/index.html
@@ -63,5 +63,33 @@
             </div>
         </div>
     </div>
+    <!-- section2 -->
+    <div class="section2">
+        <div class="cards2">
+            <div class="card2">
+                <img width="70px" src="./images/people-outline.svg" alt="">
+                <div class="card2-content">
+                    <h2 class="card2-title">Peace of mind</h2>
+                    <p class="card2-text">So it really behaves like neither</p>
+                    <p class="card2-text">Now we have given up</p>
+                </div>
+            </div>
+            <div class="card2">
+                <img width="70px" width="10px" src="./images/people-outline.svg" alt="">
+                <div class="card2-content">
+                    <h2 class="card2-title">Set for life</h2>
+                    <p class="card2-text">They were used to create the machines that they were launched.</p>
+                </div>
+            </div>
+            <div id="left-card2" class="card2">
+                <img width="70px" width="10px" src="./images/people-outline.svg" alt="">
+                <div class="card2-content">
+                    <p class="card2-text">So it really behaves like neither</p>
+                    <p class="card2-text">Now we have given up</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
  </body>
  </html>
