feature: section 3 style

--- a/index.html
+++ b/index.html
@@ -90,6 +90,66 @@
             </div>
         </div>
     </div>
+    <!-- section3 -->
+    <div class="section3">
+        <div class="industry">
+            <h2>Industry</h2>
+            <p>
+                problem trying to resolve the conflict between<br /><wbr />
+                the two major realm of classical physics Newtonian mechanics
+            </p>
+        </div>
+        <div class="cards3">
+            <div class="card3">
+                <img width="100px" src="./images/user1.png" alt="">
+                <div class="card3-content">
+                    state help you to see
+                    how many more days you need
+                    to work to reach your financial
+                    goal for the month and the year.
+                </div>
+                <div class="star">
+                    <img src="./images/icon-star.svg" alt="">
+                    <img src="./images/icon-star.svg" alt="">
+                    <img src="./images/icon-star.svg" alt="">
+                    <img src="./images/icon-star.svg" alt="">
+                    <img src="./images/icon-star.svg" alt="">
+                </div>
+            </div>
+            <div class="card3">
+                <img width="100px" width="10px" src="./images/user2.png" alt="">
+                <div class="card3-content">
+                    state help you to see
+                    how many more days you need
+                    to work to reach your financial
+                    goal for the month and the year.
+                </div>
+                <div class="star">
+                    <img src="./images/icon-star.svg" alt="">
+                    <img src="./images/icon-star.svg" alt="">
+                    <img src="./images/icon-star.svg" alt="">
+                    <img src="./images/icon-star.svg" alt="">
+                    <img src="./images/icon-star.svg" alt="">
+                </div>
+            </div>
+            <div id="left-card3" class="card3">
+                <img width="100px" width="10px" src="./images/user3.png" alt="">
+                <div class="card3-content">
+                    state help you to see
+                    how many more days you need
+                    to work to reach your financial
+                    goal for the month and the year.
+                </div>
+                <div class="star">
+                    <img src="./images/icon-star.svg" alt="">
+                    <img src="./images/icon-star.svg" alt="">
+                    <img src="./images/icon-star.svg" alt="">
+                    <img src="./images/icon-star.svg" alt="">
+                    <img src="./images/icon-star.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
     
  </body>
  </html>
