--- a/index.html
+++ b/index.html
@@ -150,6 +150,23 @@
             </div>
         </div>
     </div>
+    <div class="section4">
+        <div class="logos">
+            <img width="90px" src="./images/Vector-1.png" alt="">
+            <img width="90px" src="./images/Vector-2.png" alt="">
+            <img width="90px" src="./images/Vector-3.png" alt="">
+            <img width="90px" src="./images/Vector-4.png" alt="">
+        </div>
+        <div class="suscribe">
+            <div class="subscribe-para">
+                Subscribe for the <br />latest news
+            </div>
+            <div>
+                <input class="input" type="text">
+                <button class="subscribe-btn">Subscribe</button>
+            </div>
+        </div>
+    </div>
     
  </body>
  </html>
