--- a/index.html
+++ b/index.html
@@ -167,6 +167,56 @@
             </div>
         </div>
     </div>
+    <div class="section5">
+        <div class="pricing">
+            <h2>Pricing</h2>
+            <p>
+                problem trying to resolve the conflict between<br />
+                the two major realm of classical physics Newtonian mechanics
+            </p>
+        </div>
+        <div class="pricing-cards">
+            <div class="free">
+                <div class="free-content">
+                    <h2>FREE</h2>
+                    <h4>Organise aross of apps by hand</h4>
+                    <h3>0 <sup>$</sup><sub>per month</sub></h3>
+                    <p><i class="fa fa-check-circle"></i>Unlimited product updates</p>
+                    <p> <i class="fa fa-check-circle"></i> Unlimited product updates</p>
+                    <p> <i class="fa fa-check-circle"></i> Unlimited product updates</p>
+                    <p> <i class="fa fa-check-circle"></i>1GB Cloud storage</p>
+                    <p> <i class="fa fa-check-circle"></i>Email and community support</p>
+                </div>
+                <button class="free-btn">Try for free</button>
+            </div>
+            <div class="standard">
+                <div class="standard-content">
+                    <h2>STANDARD</h2>
+                    <h4>Organise aross of apps by hand</h4>
+                    <h3>9.9<sup>$</sup><sub>per month</sub></h3>
+                    <p><i class="fa fa-check-circle"></i>Unlimited product updates</p>
+                    <p> <i class="fa fa-check-circle"></i> Unlimited product updates</p>
+                    <p> <i class="fa fa-check-circle"></i> Unlimited product updates</p>
+                    <p> <i class="fa fa-check-circle"></i>1GB Cloud storage</p>
+                    <p> <i class="fa fa-check-circle"></i>Email and community support</p>
+                </div>
+                <button class="standard-btn">Try for free</button>
+            </div>
+            <div class="free">
+                <div class="free-content">
+                    <h2>PREMIUM</h2>
+                    <h4>Organise aross of apps by hand</h4>
+                    <h3>99.9 <sup>$</sup><sub>per month</sub></h3>
+                    <p><i class="fa fa-check-circle"></i>Unlimited product updates</p>
+                    <p> <i class="fa fa-check-circle"></i> Unlimited product updates</p>
+                    <p> <i class="fa fa-check-circle"></i> Unlimited product updates</p>
+                    <p> <i class="fa fa-check-circle"></i>1GB Cloud storage</p>
+                    <p> <i class="fa fa-check-circle"></i>Email and community support</p>
+                </div>
+                <button class="free-btn">Try for free</button>
+            </div>
+        </div>
+    </div>
     
  </body>
  </html>
