--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             </div>
         </div>
     </div>
+    <!-- section5 -->
     <div class="section5">
         <div class="pricing">
             <h2>Pricing</h2>
@@ -215,6 +216,21 @@
                 </div>
                 <button class="free-btn">Try for free</button>
             </div>
+        </div>
+    </div>
+    <div class="section6">
+        <div class="words">
+            <h2>We Have Branches All Over The World.</h2>
+            <p>
+                The gradual accumulation of information about atomic and
+                small scale behaviour during the first quarter of the 20th
+                centuary,which gave some indications about how small things
+                do behave,produced an increasing which was
+                Haisenbarg, and born.
+            </p>
+        </div>
+        <div class="map">
+            <img width="700px" src="./images/pingwig.png" alt="">
         </div>
     </div>
     
