--- a/index.html
+++ b/index.html
@@ -233,6 +233,27 @@
             <img width="700px" src="./images/pingwig.png" alt="">
         </div>
     </div>
+    <div class="section7">
+        <img height="454px" width="200px" src="./images/contact.png" alt="">
+        <div class="form">
+            <h2>Book Appointment</h2>
+            <div class="input-form">
+                <div class="type-input">
+                    <label class="label" for="name">Name:</label><br>
+                    <input class="type" type="text" id="name" placeholder="Elon Musk"><br><br>
+                </div>
+                <div class="type-input">
+                    <label class="label" for="email">Email Adress:</label><br>
+                    <input class="type" type="email" id="email" placeholder="elon@gmail.com"><br><br>
+                </div>
+                <div class="type-input">
+                    <label class="label" for="department">Department:</label><br>
+                    <input class="type" type="text" id="text" placeholder="QA/QE"><br><br>
+                </div>
+                <input class="submit-button" type="submit" value="Submit">
+            </div>
+        </div>
+    </div>
     
  </body>
  </html>
