--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
  </head>
  <body>
+    <!-- section 1 -->
     <div class="sectionA">
         <div class="navigation">
             <div class="logo">
@@ -150,6 +151,7 @@
             </div>
         </div>
     </div>
+    <!-- section 4 -->
     <div class="section4">
         <div class="logos">
             <img width="90px" src="./images/Vector-1.png" alt="">
@@ -218,6 +220,7 @@
             </div>
         </div>
     </div>
+    <!-- section6 -->
     <div class="section6">
         <div class="words">
             <h2>We Have Branches All Over The World.</h2>
@@ -233,6 +236,7 @@
             <img width="700px" src="./images/pingwig.png" alt="">
         </div>
     </div>
+    <!-- section 7 -->
     <div class="section7">
         <img height="454px" width="200px" src="./images/contact.png" alt="">
         <div class="form">
@@ -250,8 +254,18 @@
                     <label class="label" for="department">Department:</label><br>
                     <input class="type" type="text" id="text" placeholder="QA/QE"><br><br>
                 </div>
-                <input class="submit-button" type="submit" value="Submit">
+                <input class="submit-button" type="submit" value="Book Appointment">
             </div>
+        </div>
+    </div>
+    <!-- section 8 -->
+    <div class="section8">
+        <div class="consult">
+            <h2>Consulting agency for your business</h2>
+            <p>The quick fox jumps over the lazy dog</p>
+        </div>
+        <div class="contact-btn">
+            <h2>Contact us</h2>
         </div>
     </div>
     
