--- a/index.html
+++ b/index.html
@@ -268,6 +268,43 @@
             <h2>Contact us</h2>
         </div>
     </div>
+    <!-- footer-->
+    <div class="footer">
+        <div class="column">
+            <h3>Company Info</h3>
+            <p>About us</p>
+            <p>Carrier</p>
+            <p>We are hiring</p>
+            <p>blog</p>
+        </div>
+        <div class="column">
+            <h3>Legal</h3>
+            <p>About us</p>
+            <p>Carrier</p>
+            <p>We are hiring</p>
+            <p>blog</p>
+        </div>
+        <div class="column">
+            <h3>Features</h3>
+            <p>Business Marketing</p>
+            <p>User Analytics</p>
+            <p>Live Chat</p>
+            <p>Blog</p>
+        </div>
+        <div class="column">
+            <h3>Resources</h3>
+            <p>IOS</p>
+            <p>Watch</p>
+            <p>Demo Customers</p>
+            <p>API</p>
+        </div>
+        <div class="column">
+            <h3>Get In touch</h3>
+                    <p><i class="fa-solid fa-phone"></i>   (480)555-0103</p>
+                    <p><i class="fa-solid fa-location-pin"></i>   4517 Washington Ave</p>
+                    <p><i class="fa-solid fa-envelope"></i>    debra.halt@example.com</p>
+        </div>
+    </div>
     
  </body>
  </html>
