--- a/index.html
+++ b/index.html
@@ -300,9 +300,17 @@
         </div>
         <div class="column">
             <h3>Get In touch</h3>
-                    <p><i class="fa-solid fa-phone"></i>   (480)555-0103</p>
-                    <p><i class="fa-solid fa-location-pin"></i>   4517 Washington Ave</p>
-                    <p><i class="fa-solid fa-envelope"></i>    debra.halt@example.com</p>
+            <p><i class="fa-solid fa-phone"></i>   (480)555-0103</p>
+            <p><i class="fa-solid fa-location-pin"></i>   4517 Washington Ave</p>
+            <p><i class="fa-solid fa-envelope"></i>    debra.halt@example.com</p>
+        </div>
+    </div>
+    <div class="last-section">
+        <p>Made With Love By Figmaland All rights Reserved</p>
+        <div class="footer-icons">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
         </div>
     </div>
     
