--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@
                     <label class="label" for="department">Department:</label><br>
                     <input class="type" type="text" id="text" placeholder="QA/QE"><br><br>
                 </div>
+                <div class="type-input">
+                    <label class="label" for="time">Time:</label><br>
+                    <input class="type" type="text" id="text" placeholder="00:00"><br><br>
+                </div>
                 <div class="submit">
                     <input class="submit-button" type="submit" value="Book Appointment">
                 </div>
